IS-45 Use of commons beans.
Also added default message replay checker.